# pickleball-data-analysis

./: README.md  pyproject.toml
data/: fitstats.csv  freefall.csv
notebooks/: UrAco.ipynb  calibration.ipynb  coeff-of-drag-collect-data.ipynb  coeff-of-drag-compute.ipynb  measure-coefficient-of-drag.ipynb  python-modules.ipynb  x.ipynb
src/ballphysics/: models.py
src/ballphysics/analysis/: regression.py  tracking.py  transforms.py
src/ballphysics/scripts/: calibrate_camera.py  calibrate_pegboard.py  compute_drag.py
src/ballphysics/vision/: calibration.py  detection.py  utils.py
src/ballphysics/visualization/: plotting.py
