[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "ballphysics"
version = "0.1.0"
description = "Computer vision and physics analysis for ball sports trajectories"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Fred Mitchell", email = "FMitchell75+software@gmail.com"}
]

dependencies = [
    "opencv-python",
    "numpy",
    "scipy",
    "scikit-learn",
    "matplotlib",
    "click",
]

[project.scripts]
calibrate-camera = "ballphysics.scripts.calibrate_camera:calibrate_camera"
calibrate-pegboard = "ballphysics.scripts.calibrate_pegboard:calibrate_pegboard_cli"
compute-drag = "ballphysics.scripts.compute_drag:fit_drag_coefficient"

[project.optional-dependencies]
dev = [
    "pytest",
    "jupyterlab",
]

[project.urls]
Repository = "https://github.com/fm75/pickleball-data-analysis"
